--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"vue": "^3.3.4",
-		"vue-router": "^4.2.4",
-		"pinia": "^2.1.6",
-		"element-plus": "^2.3.8",
 		"@element-plus/icons-vue": "^2.1.0",
-		"axios": "^1.4.0"
+		"axios": "^1.4.0",
+		"echarts": "^5.6.0",
+		"element-plus": "^2.3.8",
+		"pinia": "^2.1.6",
+		"vue": "^3.3.4",
+		"vue-router": "^4.2.4"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^4.2.3",
-		"vite": "^4.4.0",
-		"sass": "^1.63.6",
 		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.24"
+		"postcss": "^8.4.24",
+		"sass": "^1.63.6",
+		"vite": "^4.4.0"
 	},
 	"keywords": [
 		"vue3",
