--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "playwright test",
+		"test:headed": "playwright test --headed",
+		"test:ui": "playwright test --ui",
+		"test:report": "playwright show-report"
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.1.0",
+		"@stagewise-plugins/vue": "^0.5.2",
+		"@stagewise/toolbar-vue": "^0.5.2",
 		"axios": "^1.4.0",
 		"echarts": "^5.6.0",
 		"element-plus": "^2.3.8",
@@ -18,6 +24,7 @@
 		"vue-router": "^4.2.4"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.54.1",
 		"@vitejs/plugin-vue": "^4.2.3",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.24",
