--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
 		"axios": "^1.4.0",
 		"echarts": "^5.6.0",
 		"element-plus": "^2.3.8",
+		"file-saver": "^2.0.5",
+		"jspdf": "^3.0.1",
+		"jspdf-autotable": "^5.0.2",
 		"pinia": "^2.1.6",
 		"vue": "^3.3.4",
-		"vue-router": "^4.2.4"
+		"vue-router": "^4.2.4",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.54.1",
